tests/basic/002_fun_x.pan.out
tests/basic/002_fun_x.pan:31:1-4: error: unable to verify type of f32
tests/basic/002_fun_x.pan:34:1-4: error: unable to verify type of f33
tests/basic/002_fun_x.pan:48:1-4: error: unable to verify type of f42
tests/basic/002_fun_x.pan:51:1-4: error: unable to verify type of f43
tests/basic/002_fun_x.pan:54:1-4: error: unable to verify type of f44
tests/basic/002_fun_x.pan:74:1-4: error: unable to verify type of f54
f00 : {x:ℤ | true} → {x1:ℤ | x1 = x}
f10 : ℤ → ℤ
f20 : {v:ℤ | true} → ℤ
f21 : {v:ℤ | v = 1} → ℤ
f22 : {v:ℤ | false} → ℤ
f23 : {v:ℤ | true} → ℤ
f30 : ℤ → {w:ℤ | true}
f34 : {_:ℤ | true} → {w:ℤ | w = _}
f40 : {v:ℤ | true} → {w:ℤ | true}
f41 : {v:ℤ | true} → {w:ℤ | w = v}
f45 : {v:ℤ | true} → {w:ℤ | w = v}
f50 : {v:ℤ | v = 1} → {w:ℤ | true}
f51 : {v:ℤ | v = 1} → {w:ℤ | w = v}
f52 : {v:ℤ | v = 1} → {w:ℤ | w = 1}
f53 : {v:ℤ | v = 1} → {w:ℤ | w = v ∧ w = 1}
f55 : {v:ℤ | v = 1} → {w:ℤ | w = 1 ∧ w = v}
f60 : {v:ℤ | false} → {w:ℤ | true}
f61 : {v:ℤ | false} → {w:ℤ | w = v}
f62 : {v:ℤ | false} → {w:ℤ | w = 1}
f63 : {v:ℤ | false} → {w:ℤ | w = v ∧ w = 1}
f64 : {v:ℤ | false} → {w:ℤ | false}
f65 : {v:ℤ | false} → {w:ℤ | w = v}
f66 : {v:ℤ | false} → {w:ℤ | w ≠ v}
f70 : {v:ℤ | true} → {w:ℤ | true}
f71 : {v:ℤ | true} → {w:ℤ | w = v}
f72 : {v:ℤ | v = 1} → {w:ℤ | w = 1}
f73 : {v:ℤ | v = 1} → {w:ℤ | w = v ∧ w = 1}
f74 : {v:ℤ | false} → {w:ℤ | false}
f80 : {v:ℤ | true} → {w:ℤ | w = v}